@@ -1,3 +1,7 @@
+2009-03-11  KUBO Takehiro  <kubo@jiubao.org>
+	* oraconf.rb: fix big/little endian checking problem on Mac OS X ppc.
+	    (contributed by unknown. See: Bug ID 24284 on rubyforge.)
+
 2009-02-15  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/ocidatetime.c: fix array DML and DateTime object problem.
 	    OCI8::Cursor#bind_param_array(key, array_of_datetime) didn't
